projet avec quelques sauts de lignes et code pour boostrap

--- a/projet.html
+++ b/projet.html
@@ -8,9 +8,20 @@
 	<body>
 		<h1> Eco L </h1>
 		<h2> menu déroulant </h2>
+		</br>
 		<a> 4 images de notre société </a>
-		<a> Particuliers </a>
-		<h3> footer </h3>
+		</br>
+		<a> Entreprises </a>
+		</br>
+		<a> Particuliers </a
+		>
+		<footer class="jumbotron">
+			<div class="row">
+			<div class="text-center">
+				<a> Facebook </a>
+				<a> Twitter </a>
+			</div>
+			</div>
 	<body>
 </html>
 
