rajout de quelques effets css à mon projet

--- a/projet.html
+++ b/projet.html
@@ -1,27 +1,55 @@
-<!Doctype>
+<!DOCTYPE>
 <html>
-	<head>
-		<meta charset="utf-8>
-		<title>mon projet eco</title>
-	</head>
+<head>
+<meta charset="utf-8"> 
+<title>mon projet eco</title>
+<style type="text/css"> 
+/* Styles de base */
+      body {
+        font-family: 'Bitter', serif;
+        background-color: #eef;
+        color: #259;
+      }
+</style>
 
-	<body>
-		<h1> Eco L </h1>
-		<h2> menu déroulant </h2>
-		</br>
-		<a> 4 images de notre société </a>
-		</br>
-		<a> Entreprises </a>
-		</br>
-		<a> Particuliers </a
-		>
-		<footer class="jumbotron">
-			<div class="row">
-			<div class="text-center">
-				<a> Facebook </a>
-				<a> Twitter </a>
-			</div>
-			</div>
-	<body>
+
+</head>
+
+<body>
+
+<header>
+<h1> Eco l </h1>
+<h2> menu déroulant </h2>
+</header>
+
+<nav>
+<a> 4 images de notre société </a>
+</nav>
+
+<section>
+				<article>
+					<h1>ENTREPRISE</h1>
+					<p>Ma société vous permet de concevoir des installations sur mesure </br> à destionation des professionnels</p>
+				</article>
+				<article>
+					<h1>PARTICULIERS</h1>
+					<p>Ma société vend 1 produit phare décliné sous 4 couleurs </br> à destionation des particuliers</p>
+				</article>	
+</section>
+
+
+
+
+<footer class="jumbotron>
+	<div class="row">
+		<div class="text-center">
+	  			 <a> Facebook </a>
+			    	 <a> Twitter </a>
+		</div>  
+	</div>  
+
+</Body>
+
+
 </html>
 
