--- a/projet.html
+++ b/projet.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE>
 <html>
 <head>
@@ -10,6 +11,61 @@
         background-color: #eef;
         color: #259;
       }
+/* blocs */
+  nav
+{
+	display: inline-block;
+	/*élément ou block que l'on peut placer côte à cote*/
+	/*float: left; : positionne à gauche*/
+	width: 150px;
+	border: 1px solid black;
+	vertical-align: top;
+}
+
+section
+{
+	display: inline-block;
+	margin-left: 170px;
+	/* appliquer une marge à la section*/
+	border: 1px solid blue;
+	vertical-align: top;
+	/* valeurs : baseline, top, middle, bottom */
+}
+footer
+{
+	position: absolute;
+	right: 40px;
+	bottom: 0px;
+	border: 1px solid black;
+}
+
+/*Marges intérieurs :
+padding: 12px; 
+Autres:
+padding-top
+padding-bottom
+padding-left
+padding-right
+*/
+
+/*Marges extérieurs :
+Margin: 12px;
+Autres:
+margin-top
+margin-bottom
+margin-left
+margin-right
+*/
+
+/*Centrer les block
+width: 350px;
+margin: auto;
+border; 1px solid black;
+text-align: justify;
+padding: 12px;
+margin-bottom: 20px;
+*/
+	  
 </style>
 
 
@@ -44,12 +100,14 @@
 	<div class="row">
 		<div class="text-center">
 	  			 <a> Facebook </a>
-			    	 <a> Twitter </a>
+			     <a> Twitter </a>
 		</div>  
 	</div>  
+                                
+      
+
 
 </Body>
 
 
 </html>
-
