--- a/projet.html
+++ b/projet.html
@@ -105,7 +105,7 @@ margin-bottom: 20px;
 	</div>  
                                 
       
-
+<script src="../js/projet4.js"></script>
 
 </Body>
 
